--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
   <div class="second-block">
         <div class="comments comments-1">
             <div class="perfil">
-                <img src="./image/image-colton.jpg" alt="">
+                <img src="./image/image-colton.jpg" alt="Colton">
 
                     <div class="perfil-description">
                         <h2>Colton Smith</h2>
@@ -128,7 +128,7 @@
 
         <div class="comments comments-2">
             <div class="perfil">
-                <img src="./image/image-irene.jpg" alt="">
+                <img src="./image/image-irene.jpg" alt="Irene">
 
                 <div class="perfil-description">
                 <h2>Irene Roberts</h2>
@@ -147,7 +147,7 @@
 
         <div class="comments comments-3">
             <div class="perfil">
-                    <img src="./image/image-anne.jpg" alt="">
+                    <img src="./image/image-anne.jpg" alt="Anne">
 
                 <div class="perfil-description">
                 <h2>Anne Wallace</h2>
